# crx-dms-manuscript

./: LICENSE-APACHE  LICENSE-MIT  README.md
DMS_analysis/: .gitignore  analysis.ipynb  plasmid_library_stats.ipynb  requirements.txt  sample_info.tsv
DMS_analysis/barcode_processing/: call_variants.py  clean_reads.sh  count_bcs.py  count_bcs.sh  extract_bcs.sh
DMS_analysis/barcodes/: README.md
DMS_analysis/external_data_sources/: 2023.11.07.uniprotkb_uniref_cluster_50_UniRef50_O4.clustal  AlphaMissense_CRX.tsv  CADD_CRX_scores.tsv  CRX_AOU_variants.tsv  CRX_clinvar_variants.tsv  CRX_genomic_coordinates.tsv  CRX_gnomAD_variants.tsv  CRX_predicted_disorder.tsv  ESM1b_CRX_scores.csv  EVE_CRX_scores.csv  PolyPhen2_CRX_scores.tsv  README.md  crx_regions.tsv
DMS_analysis/output/: README.md
tools/bcbuddy/: Cargo.toml
tools/bcbuddy/src/: barcodes.rs  main.rs  utils.rs
tools/bcbuddy/src/utils/: fastq.rs
tools/dms_tools/: Cargo.toml
tools/dms_tools/dms_cmd/: Cargo.toml
tools/dms_tools/dms_cmd/src/: main.rs
tools/dms_tools/pydmstools/: Cargo.toml
tools/dms_tools/pydmstools/src/: lib.rs
tools/dms_tools/src/: alignment.rs  lib.rs
tools/dms_tools/src/utils/: fastq.rs
tools/fphd/: Cargo.toml  README.md
tools/fphd/src/: lib.rs
