[package]
name = "dms"
version = "0.1.0"
authors = ["James Shepherdson <james.shepherdson@wustl.edu>"]
edition = "2021"
license = "MIT"
description = "Bioinformatics tool for working with Deep Mutational Scanning data"

[[bin]]
name = "dms"

[dependencies]
dms_tools = { path = ".." }
clap = { version = "^3.1", features = ["derive"] }
