[package]
name = "pydmstools"
version = "0.1.0"
authors = ["James Shepherdson <james.shepherdson@wustl.edu>"]
edition = "2021"
license = "MIT"
description = "Python bioinformatics library for working with Deep Mutational Scanning data"

[lib]
name = "pydmstools"
crate-type = ["cdylib"]

[dependencies]
dms_tools = { path = ".." }
pyo3 = { version = "^0.14", features = ["extension-module"] }

